facet-diff/tests/snapshots/diff_snapshots__diff_scalar_f64_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│3.141592653589793   │
╰────────────────────╯
╭After───────────────╮
│3.141592653589793   │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
