facet-diff/tests/snapshots/diff_snapshots__diff_scalar_i128_min_max.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
-170141183460469231731687303715884105728
170141183460469231731687303715884105727
-170141183460469231731687303715884105728 → 170141183460469231731687303715884105727
