facet-diff/tests/snapshots/diff_snapshots__diff_scalar_i16_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│1000                │
╰────────────────────╯
╭After───────────────╮
│1000                │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
