facet-diff/tests/snapshots/diff_snapshots__diff_scalar_i16_min_max.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────╮
│-32768          │
╰────────────────╯
╭After───────────╮
│32767           │
╰────────────────╯
╔Diff════════════╗
║-32768 → 32767  ║
╚════════════════╝
