facet-diff/tests/snapshots/diff_snapshots__diff_scalar_i32_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────╮
│100000            │
╰──────────────────╯
╭After─────────────╮
│-100000           │
╰──────────────────╯
╔Diff══════════════╗
║100000 → -100000  ║
╚══════════════════╝
