facet-diff/tests/snapshots/diff_snapshots__diff_scalar_i32_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│100000              │
╰────────────────────╯
╭After───────────────╮
│100000              │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
