facet-diff/tests/snapshots/diff_snapshots__diff_scalar_i32_min_max.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────────────╮
│-2147483648               │
╰──────────────────────────╯
╭After─────────────────────╮
│2147483647                │
╰──────────────────────────╯
╔Diff══════════════════════╗
║-2147483648 → 2147483647  ║
╚══════════════════════════╝
