facet-diff/tests/snapshots/diff_snapshots__diff_scalar_i64_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────────╮
│10000000000                 │
╰────────────────────────────╯
╭After───────────────────────╮
│-10000000000                │
╰────────────────────────────╯
╔Diff════════════════════════╗
║10000000000 → -10000000000  ║
╚════════════════════════════╝
