facet-diff/tests/snapshots/diff_snapshots__diff_scalar_i8_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│42          │
╰────────────╯
╭After───────╮
│-42         │
╰────────────╯
╔Diff════════╗
║42 → -42    ║
╚════════════╝
