facet-diff/tests/snapshots/diff_snapshots__diff_scalar_str_multiline.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────────╮
│"line1           │
│line2"           │
╰─────────────────╯
╭After────────────╮
│"line1           │
│line3"           │
╰─────────────────╯
╔Diff═════════════╗
║"line1           ║
║line2" → "line1  ║
║line3"           ║
╚═════════════════╝
